<resources>

    <string name="app_name">돈콜미</string>
    <string name="placeholder_1">녹음내역 열람</string>
    <string name="placeholder_2">총 15개</string>
    <string name="placeholder_3">홍길동\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t5개</string>
    <string name="placeholder_4">1. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="placeholder_5">1. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="placeholder_6">1. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="placeholder_7">1. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="placeholder_8">1. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="placeholder_9">홍길순\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t10개</string>
    <string name="calling">전화 연결중...</string>
    <string name="placeholder_10">1. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="placeholder_11">2. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="placeholder_12">3. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="placeholder_13">4. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="placeholder_14">5. 이번 돈콜미 ui를 만들면서 어쩌구 저쩌구.........\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t...더보기</string>
    <string name="activity_login_signup_message">계정이 없으신가요? 회원가입</string>
    <string name="ChooseTalker">화자 수를 선택해 주세요</string>
    <string name="FiveSpeakers">5명</string>
    <string name="FourSpeakers">4명</string>
    <string name="ThreeSpeakers">3명</string>
    <string name="TwoSpeakers">2명</string>
    <string name="SuggestService">보이스 피싱 방지 서비스를 제공받으시겠습니까?</string>
    <string name="NoBtn">아니오</string>
    <string name="ServiceTitle">보이스 피싱 방지</string>
    <string name="YesBtn">예</string>
    <string name="CheckBtn">확인</string>
    <string name="ServiceMessage">통화 진행 시 통화 녹음을 활성화 해주세요</string>
    <string name="ActiveSituation">진행 상황: 0%</string>
    <string name="fileTitle">파일 제목</string>
    <string name="fileContent">파일 내용</string>
    <string name="exit">X</string>
    <string name="home">홈</string>
    <string name="recentDialog">최근기록</string>
    <string name="dialer">연락처</string>
    <string name="phishingLog">피싱 기록</string>
    <string name="key">전화</string>
    <string name="contacts">연락처</string>
    <string name="contactName">Name</string>
    <string name="phoneNum">Phone Number</string>
    <string name="inputNum">전화번호 입력</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="star">*</string>
    <string name="_0">0</string>
    <string name="sharp">#</string>
    <string name="todo">TODO</string>
</resources>
