<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:focusable="false"
        android:hint="@string/inputNum"
        android:inputType="phone"
        android:textColorHint="#78909C"
        android:textSize="40sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="50dp"
        android:columnCount="3"
        android:orientation="horizontal"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/one"
            android:layout_row="0"
            android:layout_column="0"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/two"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/three"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/four"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/five"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/six"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_6"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seven"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eight"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nine"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/star"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/star"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/zero"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sharp"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:text="@string/sharp"
            android:textSize="30sp"
            android:textStyle="bold" />
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/icon_call"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/call" />

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/back" />
    </LinearLayout>
</LinearLayout>
